# clammy

./: Cargo.toml  README.md  justfile
docs/: config.schema.json  config.toml
src/: config.rs  hyprland_events.rs  main.rs  probe.rs  styles.rs  theme.rs
src/components/: battery.rs  clock.rs  mod.rs  notification_toggle.rs  tray_widget.rs  volume.rs  window_title.rs  workspaces.rs
src/components/system_tray/: icon.rs  menu.rs  mod.rs  tray.rs
