[package]
name = "clammy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
hyprland = "0.4.0-beta.3"
iced = { version = "0.13.1", features = [
    "highlighter",
    "iced_highlighter",
    "image",
    "lazy",
    "markdown",
    "multi-window",
    "svg",
    "system",
    "tokio",
    "web-colors",
] }
iced_layershell = "0.13.7"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
system-tray = "0.8"
freedesktop-icons = "0.4"

[[bin]]
name = "clammy"
type = "bin"
