[package]
name = "clammy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
hyprland = "0.4.0-beta.3"
iced = { version = "0.13.1", features = ["image", "tokio", "multi-window"] }
iced_layershell = "0.13.7"
tokio = { version = "1.48.0", features = ["time", "sync", "rt-multi-thread", "macros"] }
system-tray = "0.8"

[[bin]]
name = "clammy"
type = "bin"

[profile.release]
# More aggressive optimizations (default is 3)
opt-level = "z"  # Optimize for size ("s" is also good, "z" is more aggressive)

# Enable Link Time Optimization - optimizes across crate boundaries
lto = true

# Reduce number of codegen units for better optimization (default is 16)
codegen-units = 1

# Strip debug symbols from binary
strip = true

# Abort on panic instead of unwinding (smaller binary)
panic = "abort"