[package]
name = "clammy"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dirs = "5.0"
hyprland = "0.4.0-beta.3"
iced = { version = "0.13.1", features = ["image", "tokio", "multi-window"] }
iced_layershell = "0.13.7"
notify = "8.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["time", "sync", "rt-multi-thread", "macros"] }
toml = "0.9.8"
system-tray = "0.8"

[[bin]]
name = "clammy"
type = "bin"
